# FSB-MSE

1 - Python/database_python/: dao.py  entities.py  gui.py  main.py
1 - Python/first_python_project/: average_grade.py  bmi_calculator.py  factorial_combination.py  fibonacci.py  file_viewer.py  for-loop.py  gui_bmi.py  gui_plane_ticket.py  gui_plane_ticket_simple.py  gui_simple.py  hanoi_tower.py  leap_year_check.py  list_practice.py  number_sum.py  prime_check.py  prime_factor.py  prime_factor_def.py  random_file_create.py  random_list.py  s_calculator.py  simple_input.py  spuare_list.py  strong_password.py  sum_function.py
1 - Python/gui_chat_server/: client.py  server.py
1 - Python/neuron_network/: model_build.py  model_gui.py  pyproject.toml  readme.txt  requirements.txt  util.py
1 - Python/oop_python_project/: simple_oop.py  vehicle.py
2 - DSP/: Exercise 1 - DSP.txt  Exercise 2.txt  Exercise1.docx  Exercise2.docx  Quiz 2.txt
2 - DSP/sound-analysis/: README.md  audio_lib.py  graph_lib.py  main.py  pyproject.toml
3 - Machine Learning/: multiclass_logistic.ipynb  multiclass_softmax.ipynb
4 - Agile/: Group 2 assignment - Agile Scrum Project - Slide.pptx  Group 2 assignment - Agile Scrum Project.xlsx  HuynhQuangTien_tien24mse43032.docx
5 - Digital Image Processing/: 1 - BÀI TẬP 1 - Giải.docx  1 - BÀI TẬP 1 - Sheet.xlsx  1 - BÀI TẬP 1.docx  2 - Bài tập 2 - Code.html  3 - Bài tập 3.txt  3 - Mã hóa.docx  3 - Mã hóa.xlsx
5 - Digital Image Processing/Assignment/DetectFace/: dataset.py  face.py  main.py  pyproject.toml
(+8 files in other folders)
