[project]
name = "detectface"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "deepface>=0.0.93",
    "dlib>=19.24.6",
    "gradio>=5.23.1",
    "matplotlib>=3.10.1",
    "mtcnn>=1.0.0",
    "numpy>=2.1.3",
    "opencv-python>=4.11.0.86",
    "tensorflow[and-cuda]>=2.19.0",
    "tf-keras>=2.19.0",
]
